--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 
 client_id = "7d73faef9f5579199909a48cf7ce9def"
 name = "NextGen Smart Variants"
-application_url = "https://nextgen-variants.trycloudflare.com"
+application_url = "https://productimagevariant-oiqs059h6-ustrendyim-apps-projects.vercel.app"
 embedded = true
 
 [app_info]
@@ -40,4 +40,4 @@ uri = "/webhooks/compliance"
 scopes = "write_products,read_products,read_themes,write_themes,read_inventory,write_inventory"
 
 [auth]
-redirect_urls = [ "https://nextgen-variants.trycloudflare.com/auth" ]
+redirect_urls = [ "https://productimagevariant-oiqs059h6-ustrendyim-apps-projects.vercel.app/auth" ]
