\Deploy: Fixed Prisma build issue and updated URLs to working deployment"

--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,5 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "react-router",
-  "functions": {
-    "app/routes/**/*.{ts,tsx}": {
-      "maxDuration": 30
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "framework": "react-router"
 }
