--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-app-react-router": "^0.2.0",
     "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
+    "@vercel/react-router": "^1.2.3",
     "isbot": "^5.1.0",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
